refactor(Gallery): 使用ControlPage统一每个页面的样式

--- a/src/Huskui.Gallery/Themes/Gallery.axaml
+++ b/src/Huskui.Gallery/Themes/Gallery.axaml
@@ -4,5 +4,6 @@
         <ResourceInclude Source="/Themes/ExampleContainer.axaml" />
         <ResourceInclude Source="/Themes/CodeViewer.axaml" />
         <ResourceInclude Source="/Themes/ThemeSelector.axaml" />
+        <ResourceInclude Source="/Themes/ControlPage.axaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
